// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsAPI statsAPI/basic should have stats 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      filteredRelated: 0,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      isOverSizeLimit: false,
      name: main.js,
      related: Array [],
      size: 207,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  children: Array [],
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      children: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      filteredModules: undefined,
      hash: 27a83dfdb1b13db8,
      id: 909,
      idHints: Array [],
      initial: true,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: false,
          depth: 0,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 585,
          identifier: <ROOT>/tests/fixtures/a.js,
          index: 0,
          index2: 0,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/a.js,
          nameForCondition: <ROOT>/tests/fixtures/a.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 0,
          preOrderIndex: 0,
          providedExports: Array [],
          reasons: Array [
            Object {
              moduleId: null,
              resolvedModuleId: null,
              type: entry,
              userRequest: ./fixtures/a,
            },
            Object {
              moduleId: 585,
              moduleIdentifier: <ROOT>/tests/fixtures/a.js,
              moduleName: ./fixtures/a.js,
              resolvedModule: ./fixtures/a.js,
              resolvedModuleId: 585,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/a.js,
              type: cjs self exports reference,
              userRequest: self,
            },
          ],
          size: 55,
          sizes: Object {
            javascript: 55,
          },
          source: module.exports = function a() {
	return "This is a";
};,
          type: module,
          usedExports: null,
          warnings: 0,
        },
      ],
      names: Array [
        main,
      ],
      origins: Array [
        Object {
          loc: main,
          module: ,
          moduleId: undefined,
          moduleIdentifier: ,
          moduleName: ,
          request: ./fixtures/a,
        },
      ],
      parents: Array [],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      siblings: Array [],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      type: chunk,
    },
  ],
  entrypoints: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 207,
        },
      ],
      assetsSize: 207,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  env: undefined,
  errors: Array [],
  errorsCount: 0,
  filteredAssets: undefined,
  filteredModules: undefined,
  hash: 03ddaa1ecb196f90,
  modules: Array [
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 585,
      identifier: <ROOT>/tests/fixtures/a.js,
      index: 0,
      index2: 0,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/a.js,
      nameForCondition: <ROOT>/tests/fixtures/a.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 0,
      preOrderIndex: 0,
      providedExports: Array [],
      reasons: Array [
        Object {
          moduleId: null,
          resolvedModuleId: null,
          type: entry,
          userRequest: ./fixtures/a,
        },
        Object {
          moduleId: 585,
          moduleIdentifier: <ROOT>/tests/fixtures/a.js,
          moduleName: ./fixtures/a.js,
          resolvedModule: ./fixtures/a.js,
          resolvedModuleId: 585,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/a.js,
          type: cjs self exports reference,
          userRequest: self,
        },
      ],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      source: module.exports = function a() {
	return "This is a";
};,
      type: module,
      usedExports: null,
      warnings: 0,
    },
  ],
  namedChunkGroups: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 207,
        },
      ],
      assetsSize: 207,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  outputPath: <ROOT>/dist,
  publicPath: auto,
  warnings: Array [],
  warningsCount: 0,
}
`;

exports[`statsAPI statsAPI/exports should have usedExports and providedExports stats 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      filteredRelated: 0,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      isOverSizeLimit: false,
      name: main.js,
      related: Array [],
      size: 441,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  children: Array [],
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      children: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      filteredModules: undefined,
      hash: 20532fb90939aa5e,
      id: 909,
      idHints: Array [],
      initial: true,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: false,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: false,
          depth: 0,
          errors: 0,
          failed: false,
          filteredModules: undefined,
          filteredReasons: undefined,
          id: 533,
          identifier: <ROOT>/tests/fixtures/esm/abc.js|0e47874493fdefd960142324ecb88ecc,
          index: 0,
          index2: 3,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/esm,
          modules: Array [
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 0,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/abc.js,
              index: 0,
              index2: 3,
              issuer: undefined,
              issuerId: undefined,
              issuerName: undefined,
              issuerPath: undefined,
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/abc.js,
              nameForCondition: <ROOT>/tests/fixtures/esm/abc.js,
              optimizationBailout: Array [
                ModuleConcatenation bailout: Module is an entry point,
              ],
              optional: false,
              orphan: true,
              postOrderIndex: 3,
              preOrderIndex: 0,
              providedExports: Array [],
              reasons: Array [],
              size: 80,
              sizes: Object {
                javascript: 80,
              },
              type: module,
              usedExports: Array [],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/a.js,
              index: 1,
              index2: 0,
              issuer: <ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/a.js,
              nameForCondition: <ROOT>/tests/fixtures/esm/a.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 0,
              preOrderIndex: 1,
              providedExports: Array [
                a,
                default,
              ],
              reasons: Array [
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./a,
                },
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./a,
                },
              ],
              size: 37,
              sizes: Object {
                javascript: 37,
              },
              type: module,
              usedExports: Array [
                a,
              ],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/b.js,
              index: 2,
              index2: 1,
              issuer: <ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/b.js,
              nameForCondition: <ROOT>/tests/fixtures/esm/b.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 1,
              preOrderIndex: 2,
              providedExports: Array [
                b,
                default,
              ],
              reasons: Array [
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./b,
                },
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./b,
                },
              ],
              size: 38,
              sizes: Object {
                javascript: 38,
              },
              type: module,
              usedExports: Array [
                default,
              ],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/c.js,
              index: 3,
              index2: 2,
              issuer: <ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/c.js,
              nameForCondition: <ROOT>/tests/fixtures/esm/c.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 2,
              preOrderIndex: 3,
              providedExports: Array [
                c,
                default,
              ],
              reasons: Array [
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./c,
                },
                Object {
                  moduleId: undefined,
                  moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./c,
                },
              ],
              size: 37,
              sizes: Object {
                javascript: 37,
              },
              type: module,
              usedExports: true,
              warnings: 0,
            },
          ],
          name: ./fixtures/esm/abc.js + 3 modules,
          nameForCondition: <ROOT>/tests/fixtures/esm/abc.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: false,
          postOrderIndex: 3,
          preOrderIndex: 0,
          providedExports: Array [],
          reasons: Array [
            Object {
              moduleId: null,
              resolvedModuleId: null,
              type: entry,
              userRequest: ./fixtures/esm/abc,
            },
          ],
          size: 192,
          sizes: Object {
            javascript: 192,
          },
          type: module,
          usedExports: Array [],
          warnings: 0,
        },
      ],
      names: Array [
        main,
      ],
      origins: Array [
        Object {
          loc: main,
          module: ,
          moduleId: undefined,
          moduleIdentifier: ,
          moduleName: ,
          request: ./fixtures/esm/abc,
        },
      ],
      parents: Array [],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      siblings: Array [],
      size: 192,
      sizes: Object {
        javascript: 192,
        runtime: 677,
      },
      type: chunk,
    },
  ],
  entrypoints: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 441,
        },
      ],
      assetsSize: 441,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  errors: Array [],
  errorsCount: 0,
  filteredAssets: undefined,
  filteredModules: undefined,
  hash: 6522596fd3b60bef,
  modules: Array [
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <ROOT>/tests/fixtures/esm/abc.js,
      index: 0,
      index2: 3,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/abc.js,
      nameForCondition: <ROOT>/tests/fixtures/esm/abc.js,
      optimizationBailout: Array [
        ModuleConcatenation bailout: Module is an entry point,
      ],
      optional: false,
      orphan: true,
      postOrderIndex: 3,
      preOrderIndex: 0,
      providedExports: Array [],
      reasons: Array [],
      size: 80,
      sizes: Object {
        javascript: 80,
      },
      type: module,
      usedExports: Array [],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredModules: undefined,
      filteredReasons: undefined,
      id: 533,
      identifier: <ROOT>/tests/fixtures/esm/abc.js|0e47874493fdefd960142324ecb88ecc,
      index: 0,
      index2: 3,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/esm,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 0,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/abc.js,
          index: 0,
          index2: 3,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/abc.js,
          nameForCondition: <ROOT>/tests/fixtures/esm/abc.js,
          optimizationBailout: Array [
            ModuleConcatenation bailout: Module is an entry point,
          ],
          optional: false,
          orphan: true,
          postOrderIndex: 3,
          preOrderIndex: 0,
          providedExports: Array [],
          reasons: Array [],
          size: 80,
          sizes: Object {
            javascript: 80,
          },
          type: module,
          usedExports: Array [],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/a.js,
          index: 1,
          index2: 0,
          issuer: <ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/a.js,
          nameForCondition: <ROOT>/tests/fixtures/esm/a.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 0,
          preOrderIndex: 1,
          providedExports: Array [
            a,
            default,
          ],
          reasons: Array [
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./a,
            },
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./a,
            },
          ],
          size: 37,
          sizes: Object {
            javascript: 37,
          },
          type: module,
          usedExports: Array [
            a,
          ],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/b.js,
          index: 2,
          index2: 1,
          issuer: <ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/b.js,
          nameForCondition: <ROOT>/tests/fixtures/esm/b.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 1,
          preOrderIndex: 2,
          providedExports: Array [
            b,
            default,
          ],
          reasons: Array [
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./b,
            },
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./b,
            },
          ],
          size: 38,
          sizes: Object {
            javascript: 38,
          },
          type: module,
          usedExports: Array [
            default,
          ],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/c.js,
          index: 3,
          index2: 2,
          issuer: <ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/c.js,
          nameForCondition: <ROOT>/tests/fixtures/esm/c.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 2,
          preOrderIndex: 3,
          providedExports: Array [
            c,
            default,
          ],
          reasons: Array [
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./c,
            },
            Object {
              moduleId: undefined,
              moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./c,
            },
          ],
          size: 37,
          sizes: Object {
            javascript: 37,
          },
          type: module,
          usedExports: true,
          warnings: 0,
        },
      ],
      name: ./fixtures/esm/abc.js + 3 modules,
      nameForCondition: <ROOT>/tests/fixtures/esm/abc.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: 3,
      preOrderIndex: 0,
      providedExports: Array [],
      reasons: Array [
        Object {
          moduleId: null,
          resolvedModuleId: null,
          type: entry,
          userRequest: ./fixtures/esm/abc,
        },
      ],
      size: 192,
      sizes: Object {
        javascript: 192,
      },
      type: module,
      usedExports: Array [],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <ROOT>/tests/fixtures/esm/a.js,
      index: 1,
      index2: 0,
      issuer: <ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/a.js,
      nameForCondition: <ROOT>/tests/fixtures/esm/a.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 0,
      preOrderIndex: 1,
      providedExports: Array [
        a,
        default,
      ],
      reasons: Array [
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./a,
        },
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./a,
        },
      ],
      size: 37,
      sizes: Object {
        javascript: 37,
      },
      type: module,
      usedExports: Array [
        a,
      ],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <ROOT>/tests/fixtures/esm/b.js,
      index: 2,
      index2: 1,
      issuer: <ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/b.js,
      nameForCondition: <ROOT>/tests/fixtures/esm/b.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 1,
      preOrderIndex: 2,
      providedExports: Array [
        b,
        default,
      ],
      reasons: Array [
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./b,
        },
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./b,
        },
      ],
      size: 38,
      sizes: Object {
        javascript: 38,
      },
      type: module,
      usedExports: Array [
        default,
      ],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <ROOT>/tests/fixtures/esm/c.js,
      index: 3,
      index2: 2,
      issuer: <ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/c.js,
      nameForCondition: <ROOT>/tests/fixtures/esm/c.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 2,
      preOrderIndex: 3,
      providedExports: Array [
        c,
        default,
      ],
      reasons: Array [
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./c,
        },
        Object {
          moduleId: undefined,
          moduleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./c,
        },
      ],
      size: 37,
      sizes: Object {
        javascript: 37,
      },
      type: module,
      usedExports: true,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/define_property_getters,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/define_property_getters,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 290,
      sizes: Object {
        runtime: 290,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/has_own_property,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/has_own_property,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 107,
      sizes: Object {
        runtime: 107,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/make_namespace_object,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/make_namespace_object,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 280,
      sizes: Object {
        runtime: 280,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
  ],
  namedChunkGroups: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 441,
        },
      ],
      assetsSize: 441,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  outputPath: <ROOT>/dist,
  publicPath: auto,
  warnings: Array [],
  warningsCount: 0,
}
`;

exports[`statsAPI statsAPI/ids should have ids when ids is true 1`] = `undefined`;

exports[`statsAPI statsAPI/layer-stats should have module layer 1`] = `
Object {
  filteredModules: undefined,
  modules: Array [
    Object {
      children: Array [],
      issuer: ,
      issuerName: ,
      layer: test,
      size: 304,
      sizes: Object {
        javascript: 304,
      },
      type: modules by layer,
    },
    Object {
      children: Array [],
      issuer: ,
      issuerName: ,
      layer: legacy,
      size: 304,
      sizes: Object {
        javascript: 304,
      },
      type: modules by layer,
    },
  ],
}
`;

exports[`statsAPI statsAPI/with-query should output stats with query 1`] = `undefined`;
